NetBSD Problem Report #55608

From clare@csel.org  Tue Aug 25 21:24:23 2020
Return-Path: <clare@csel.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 8B33F1A923A
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 25 Aug 2020 21:24:23 +0000 (UTC)
Message-Id: <20200825212418.32A0C3874F@mail.csel.org>
Date: Wed, 26 Aug 2020 06:24:18 +0900 (JST)
From: clare@csel.org <ShinichiDoyashiki@csel.org>
Reply-To: clare@csel.org
To: gnats-bugs@NetBSD.org
Subject: cannot input specific key of the USB Japanese keyboard layout
X-Send-Pr-Version: 3.95

>Number:         55608
>Category:       kern
>Synopsis:       cannot input specific key of the USB Japanese keyboard layout
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Aug 25 21:25:00 +0000 2020
>Closed-Date:    Thu Aug 27 08:11:03 +0000 2020
>Last-Modified:  Sat Sep 19 12:25:01 +0000 2020
>Originator:     Shinichi Doyashiki
>Release:        NetBSD 9.99.71
>Organization:
	at home
>Environment:
System: NetBSD chise2.csel.org 9.99.71 NetBSD 9.99.71 (J4105PC) #3: Tue Aug 25 14:01:05 JST 2020 clare@chise2.csel.org:/export/netbsd/current/src/sys/arch/amd64/compile/J4105PC amd64
Architecture: x86_64
Machine: amd64
>Description:
	With my keyboard, the ARCHISS keyboard model AS-KBPD91/LSBKN,
	I cannot input '}' nor ']' in wscons's Japanese keymap mode.
	This scancode of the key ']' can be varying depending on the
	hardware model and/or the vendor.

>How-To-Repeat:
	1. get and plug the USB keyboard with Japanese layout.
	2. set keymap to "jp" by "wsconsctl -w encoding=jp".
	3. hit the "]" key and see the results.

>Fix:
	Add the missing scancode mapping.

RCS file: /export/netbsd/cvsroot/src/sys/dev/hid/hidkbdmap.c,v
retrieving revision 1.10
diff -u -r1.10 hidkbdmap.c
--- hidkbdmap.c	13 Jul 2020 09:44:48 -0000	1.10
+++ hidkbdmap.c	25 Aug 2020 08:05:16 -0000
@@ -171,7 +171,8 @@
     KC(46),			KS_asciicircum,		KS_asciitilde,
     KC(47),			KS_at,			KS_grave,
     KC(48),			KS_bracketleft,		KS_braceleft,
-    KC(50),			KS_bracketright,	KS_braceright,
+    KC(49),			KS_bracketright,	KS_braceright, /* ARCHISS model */
+    KC(50),			KS_bracketright,	KS_braceright, /* other model */
     KC(51),			KS_semicolon,		KS_plus,
     KC(52),			KS_colon,		KS_asterisk,
     KC(53), 			KS_Zenkaku_Hankaku, /* replace grave/tilde */

>Release-Note:

>Audit-Trail:
From: "Jaromir Dolecek" <jdolecek@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55608 CVS commit: src/sys/dev/hid
Date: Wed, 26 Aug 2020 10:34:04 +0000

 Module Name:	src
 Committed By:	jdolecek
 Date:		Wed Aug 26 10:34:04 UTC 2020

 Modified Files:
 	src/sys/dev/hid: hidkbdmap.c

 Log Message:
 for jp keymap map also scan code 49 to right bracket to handle ARCHISS model

 PR kern/55608 by Shinichi Doyashiki


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/sys/dev/hid/hidkbdmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Wed, 26 Aug 2020 18:37:03 +0000
State-Changed-Why:
patch was commited; is the issue corrected?


From: Shinichi Doyashiki <clare@csel.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/55608 (cannot input specific key of the USB Japanese
 keyboard layout)
Date: Thu, 27 Aug 2020 09:31:38 +0900

 2020=E5=B9=B48=E6=9C=8827=E6=97=A5(=E6=9C=A8) 3:37 <jakllsch@netbsd.org>:
 > patch was commited; is the issue corrected?

 it worked, thank you.

 --=20
 Shinichi Doyashiki <clare@csel.org>

State-Changed-From-To: feedback->closed
State-Changed-By: jdolecek@NetBSD.org
State-Changed-When: Thu, 27 Aug 2020 08:11:03 +0000
State-Changed-Why:
Patch applied, thank you.


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55608 CVS commit: [netbsd-9] src/sys/dev/hid
Date: Sat, 19 Sep 2020 12:16:14 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Sep 19 12:16:14 UTC 2020

 Modified Files:
 	src/sys/dev/hid [netbsd-9]: hidkbdmap.c

 Log Message:
 Pull up following revision(s) (requested by nonaka in ticket #1086):

 	sys/dev/hid/hidkbdmap.c: revision 1.11

 for jp keymap map also scan code 49 to right bracket to handle ARCHISS model
 PR kern/55608 by Shinichi Doyashiki


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.10.2 -r1.1.10.3 src/sys/dev/hid/hidkbdmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55608 CVS commit: [netbsd-8] src/sys/dev/usb
Date: Sat, 19 Sep 2020 12:20:36 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Sep 19 12:20:36 UTC 2020

 Modified Files:
 	src/sys/dev/usb [netbsd-8]: ukbdmap.c

 Log Message:
 Pull up following revision(s) (requested by nonaka in ticket #1606):

 	sys/dev/hid/hidkbdmap.c: revision 1.11 (patch)
 	(applied to sys/dev/usb/ukbdmap.c)

 for jp keymap map also scan code 49 to right bracket to handle ARCHISS model
 PR kern/55608 by Shinichi Doyashiki


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.31.10.1 src/sys/dev/usb/ukbdmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.